--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -2,5 +2,101 @@
   <div class="content_header">
     <div class="content_title">ABOUT US</div>
   </div>
-  I don't know what Campus Smack is yet, so stop asking....
+<div class="content_container">
+<div class="page">
+<p class="about"><strong>What is Campusmack?</strong></p>
+
+<p>Campusmack is a website where College Students, Alumni, and Fans alike can post and share content about rival campuses or the campuses they love.  Have you ever been frustrated by a friend, coworker, or family member who constantly gets in your face about how the College you love sucks?  Campusmack is designed to help you find and post dirt on the Campus your antagonist supports so you can put them in their place!</p>
+
+<p>While it can be tough to hold back sometimes when talking smack, Campusmack wants to build an edgy yet clean environment for its users.  This means absolutely no bullying, nudity, or profanity.  Please Smack Responsibly!</p>
+
+<p class="about"><strong>What is a Smack?</strong></p>
+
+<p>A Smack is a photo, video, or news article about a Campus that can be used as smack talk against that Campus.  For example, a photo of a Duke basketball player getting dunked on by a UNC player would be a photo Smack that a user could post onto the Duke landing page.  Once the Smack is posted, it can be viewed by other users and sent as Smack to their rivals.</p>
+
+<p class="about"><strong>What does &quot;Send as Smack&quot; do?</strong></p>
+
+<p>Everything posted onto Campusmack can be sent as Smack Talk.  If you find a post on Campusmack that you’d like to rub in the face of the opposition, click the &quot;Send as Smack&quot; button associated with that post.  You’ll be brought to a landing page that allows you to import contacts from your preferred email provider (Gmail, Yahoo, AOL, etc.) and send an email to those you want to Smack.  You can type in a custom message and once you click “Send” and email will be sent from our servers to the people you selected to receive the Smack.  The content from the post you chose to share will show up in the recipients Inbox with a Subject line that reads &quot;You just got SMACKED by (your first name) (your last name)&quot;.</p>
+
+<p class="about"><strong>What is a Redemption?</strong></p>
+
+<p>A Redemption is a photo, video, or news article about a Campus that can be used as bragging rights.  For example, if a College is ranked by US News as having a top 10 MBA program, this would be a News Redemption a user could post onto that College’s landing page.  Redemptions can also be sent as Smack talk.</p>
+
+<p class="about"><strong>What are the Conference Statistics on the Home page?</strong></p>
+
+<img src="<%= root_url %>images/About/Conference Statistics.jpg">
+<p>The snapshot above is of one of the Conference Statistics tables from the home page.  The Conference Statistics bar is made up of all Division I-A conferences.  Each table displays the top three Colleges from each conference in terms of total number of Smacks descending.  &quot;S&quot; is an abbreviation for &quot;Smacks&quot; and &quot;R&quot; is an abbreviation for &quot;Redemptions&quot;.</p>
+
+<p>If you click on &quot;Full List&quot;, it will take you to a landing page with a full list of Colleges from that conference with their respective Smack/Redemption counts.</p>
+
+<p class="about"><strong>How to Add a Smack</strong></p>
+
+<ol start="1" type="1">
+	<li>Sign in to your Campusmack account.</li>
+	
+	<li>Using the side navigation bar, hover over the conference of the team you wish to Smack.  Click on the College you want to Smack on the list that pops up, this will take you to that College’s main landing page.</li><br>
+
+	<li>Click on the <img src="<%= root_url %>images/About/Add Smack.jpg">  button at the top right hand corner of the page.</li><br>
+
+	<li>Click the box  to the right of the “Post type:” label corresponding to the type of post you’d like to upload:  <img src="<%= root_url %>images/About/Post Type.jpg"></li><br>
+
+	<li>Type in a Title for the post.</li><br>
+
+	<li>For Video posts, just paste in a Youtube URL in the “URL” field.  For Photo posts, click the “Browse” button and upload a photo.  For News articles, just paste in the URL of the article you want to share.  You can add either a Photo or Video to a News article by clicking the “Add Photo” or “Add Video” link beneath the “Article URL:” box.</li><br>
+
+	<li>Type in a summary of the content you plan to upload in the "Summary:" box.</li><br>
+
+	<li>Click the <img src="<%= root_url %>images/About/Submit.jpg"> button and the information will be posted to the College you selected.</li><br>
+
+</ol>
+
+<p class="about"><strong>How to Add a Redemption</strong></p>
+
+<ol start="1" type="1">
+	<li>Sign in to your Campusmack account.</li>
+
+	<li>Using the side navigation bar, hover over the conference of the team you wish to add a Redemption to.  Click on the College you want to add a Redemption to on the list that pops up, this will take you to that College’s main landing page.</li><br>
+
+	<li>Click on the <img src="<%= root_url %>images/About/Add Redemption.jpg">  button at the top right hand corner of the page.</li><br>
+
+	<li>Click the box  to the right of the “Post type:” label corresponding to the type of post you’d like to upload:  <img src="<%= root_url %>images/About/Post Type.jpg"></li><br>
+
+	<li>Type in a Title for the post.</li><br>
+
+<li>For Video posts, just paste in a Youtube URL in the “URL” field.  For Photo posts, click the “Browse” button and upload a photo.  For News articles, just paste in the URL of the article you want to share.  You can add either a Photo or Video to a News article by clicking the “Add Photo” or “Add Video” link beneath the “Article URL:” box.</li><br>
+
+<li>Type in a summary of the content you plan to upload in the "Summary:" box.</li><br>
+
+<li>Click the <img src="<%= root_url %>images/About/Submit.jpg"> button and the information will be posted to the College you selected.</li><br>
+
+</ol>
+
+<p class="about"><strong>How to Import Contacts</strong></p>
+
+<ol start="I" type="I">
+	<strong><li>Importing Contacts Within “Edit Profile” Settings</strong></li>
+		<ol start="1" type="1">
+			<li>Once signed in to your account, click on the “Profile” link in the upper right hand corner of the website.</li><br>
+			
+			<li>Click on the <img src="<%= root_url %>images/About/Import Contacts.jpg"> button in the “EMAIL SETTINGS” section in the lower right hand corner of the page.  
+				Our site uses the Plaxo plug in to import your contacts; you should see the following pop up once you click on the Import Contacts button:<br>
+<img src="<%= root_url %>images/About/Plaxo.jpg"></li>
+			
+			<li>Click on the radio button next to the Email Provider that you use then click "Next".</li><br>
+			
+			<li>Enter in your username and password and click "Sign In".</li><br>
+			
+			<li>Plaxo will now bring up a list of all of your contacts.  You can either scroll through this list and put a check mark next to the contacts that you want to import, or you can just select the "Check All" option above the "Back" button and all of your contacts will be selected.  Once you've selected all of the contacts you want to import, click the "Next" button.  If you forget to import certain contacts or want to add additional contacts some time in the future, just go through these steps again.</li><br>
+			
+			<li>Plaxo should now display a message that says "Your contacts have been added".  Click the "Done" button.  Campusmack will now save all of your contacts in our protected database for easy retrieval; this might take a while so just wait until the website re-routes you to a page with all of your contacts listed.</li><br>
+			</ol>
+			
+		<strong><li>Importing Contacts Through the "Send as Smack" Function</strong></li>	
+			
+			
+				
+
+
+</div>
+</div>
 </div>
