--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -4,7 +4,7 @@
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
   </head>
   <body>
-    <h1>Welcome to campusmack.com, <%= @user.first_name %></h1>
+    <h2>Welcome to Campusmack.com, <%= @user.first_name %></h2>
     <p>
       You have successfully signed up to campusmack.com,
       your username is: <%= @user.username %>.<br/>
