--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -4,6 +4,9 @@
   </div>
 <div class="content_container">
 <div class="page">
+	
+<div class="about_faq">FAQ</div>
+
 <p class="about"><strong>What is Campusmack?</strong></p>
 
 <p>Campusmack is a website where College Students, Alumni, and Fans alike can post and share content about rival campuses or the campuses they love.  Have you ever been frustrated by a friend, coworker, or family member who constantly gets in your face about how the College you love sucks?  Campusmack is designed to help you find and post dirt on the Campus your antagonist supports so you can put them in their place!</p>
@@ -27,7 +30,9 @@
 <img src="<%= root_url %>images/About/Conference Statistics.jpg">
 <p>The snapshot above is of one of the Conference Statistics tables from the home page.  The Conference Statistics bar is made up of all Division I-A conferences.  Each table displays the top three Colleges from each conference in terms of total number of Smacks descending.  &quot;S&quot; is an abbreviation for &quot;Smacks&quot; and &quot;R&quot; is an abbreviation for &quot;Redemptions&quot;.</p>
 
-<p>If you click on &quot;Full List&quot;, it will take you to a landing page with a full list of Colleges from that conference with their respective Smack/Redemption counts.</p>
+<p>If you click on &quot;Full List&quot;, it will take you to a landing page with a full list of Colleges from that conference with their respective Smack/Redemption counts.</p><br>
+
+<div class="about_faq">Campusmack Features</div>
 
 <p class="about"><strong>How to Add a Smack</strong></p>
 
@@ -74,7 +79,7 @@
 <p class="about"><strong>How to Import Contacts</strong></p>
 
 <ol start="I" type="I">
-	<strong><li>Importing Contacts Within “Edit Profile” Settings</strong></li>
+	<strong><li>Importing Contacts Within “Edit Profile” Settings</li></strong>
 		<ol start="1" type="1">
 			<li>Once signed in to your account, click on the “Profile” link in the upper right hand corner of the website.</li><br>
 			
@@ -91,7 +96,17 @@
 			<li>Plaxo should now display a message that says "Your contacts have been added".  Click the "Done" button.  Campusmack will now save all of your contacts in our protected database for easy retrieval; this might take a while so just wait until the website re-routes you to a page with all of your contacts listed.</li><br>
 			</ol>
 			
-		<strong><li>Importing Contacts Through the "Send as Smack" Function</strong></li>	
+		<strong><li>Importing Contacts Through the "Send as Smack" Function</li></strong>
+		<ol start="1" type="1">	
+			<li>Once signed in to your account, click on the <img src="<%= root_url %>images/About/Send as Smack.jpg"> button on any Campusmack post.</li><br>
+			
+			<li>On the next page, click on the <img src="<%= root_url %>images/About/Import Contacts.jpg"> button beneath the "Message" box.</li><br>
+			
+			<li>Plaxo will now bring up a list of all of your contacts.  You can either scroll through this list and put a check mark next to the contacts that you want to import, or you can just select the "Check All" option above the "Back" button and all of your contacts will be selected.  Once you've selected all of the contacts you want to import, click the "Next" button.  If you forget to import certain contacts or want to add additional contacts some time in the future, just go through these steps again.</li><br>
+
+			<li>Plaxo should now display a message that says "Your contacts have been added".  Click the "Done" button.  You can now use these contacts to easily send emails to your friends.  See instructions below for managing your contact list and creating email groups.</li><br>
+			 		
+		</ol>	
 			
 			
 				
