--- a/app/views/pages/500.html.erb
+++ b/app/views/pages/500.html.erb
@@ -16,12 +16,14 @@
 </style>
 <div class="content new_level">
   <div class="content_header">
-    <div class="content_title">Error</div>
+    <div class="content_title">Campusmack FAIL....</div>
   </div>
 
   <div class="dialog">
-    <h1>We're sorry, but something went wrong.</h1>
+    <h1>We're sorry for the fail.</h1>
 
-    <p>We've been notified about this issue and we'll take a look at it shortly.</p>
+    <p>We are ashamed of this failure and will look into it as soon as possible!  If it happens a lot, <%= link_to "Contact Us", contact-us_path %>, directly with the issue.</p><br>
+	<p>Thanks,</p>
+	<p>Campusmack Team</p>
   </div>
 </div>
