--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -34,10 +34,11 @@
 
 <div class="about_faq">Campusmack Features</div>
 
-<p class="about"><strong>How to Add a Smack</strong></p>
+<ol start="I" type="I">
+<strong><li class="about">Adding Smacks</li></strong>
 
 <ol start="1" type="1">
-	<li>Sign in to your Campusmack account.</li>
+	<li>Sign in to your Campusmack account.</li><br>
 	
 	<li>Using the side navigation bar, hover over the conference of the team you wish to Smack.  Click on the College you want to Smack on the list that pops up, this will take you to that College’s main landing page.</li><br>
 
@@ -55,10 +56,10 @@
 
 </ol>
 
-<p class="about"><strong>How to Add a Redemption</strong></p>
+<strong><li class="about">Adding Redemptions</li></strong>
 
 <ol start="1" type="1">
-	<li>Sign in to your Campusmack account.</li>
+	<li>Sign in to your Campusmack account.</li><br>
 
 	<li>Using the side navigation bar, hover over the conference of the team you wish to add a Redemption to.  Click on the College you want to add a Redemption to on the list that pops up, this will take you to that College’s main landing page.</li><br>
 
@@ -76,9 +77,9 @@
 
 </ol>
 
-<p class="about"><strong>How to Import Contacts</strong></p>
+<strong><li class="about">Importing Contacts</li></strong>
 
-<ol start="I" type="I">
+<ol start="A" type="A">
 	<strong><li>Importing Contacts Within “Edit Profile” Settings</li></strong>
 		<ol start="1" type="1">
 			<li>Once signed in to your account, click on the “Profile” link in the upper right hand corner of the website.</li><br>
@@ -104,13 +105,45 @@
 			
 			<li>Plaxo will now bring up a list of all of your contacts.  You can either scroll through this list and put a check mark next to the contacts that you want to import, or you can just select the "Check All" option above the "Back" button and all of your contacts will be selected.  Once you've selected all of the contacts you want to import, click the "Next" button.  If you forget to import certain contacts or want to add additional contacts some time in the future, just go through these steps again.</li><br>
 
-			<li>Plaxo should now display a message that says "Your contacts have been added".  Click the "Done" button.  You can now use these contacts to easily send emails to your friends.  See instructions below for managing your contact list and creating email groups.</li><br>
+			<li>Plaxo should now display a message that says "Your contacts have been added".  Click the "Done" button.  You can now use these contacts to easily send emails to your friends.  See instructions below for managing your contacts list and creating email groups.</li><br>
 			 		
 		</ol>	
-			
-			
-				
+	</ol>			
 
+<strong><li class="about">Managing Your Email Contacts</li></strong>
+
+<ol start="A" type="A">
+	<strong><li>Creating an Email Group</li></strong>
+
+	<ol start="1" type="1">
+		<li>Once signed in to your account, click on the “Profile” link in the upper right hand corner of the website.</li><br>
+	
+		<li>If you haven't already, Import your contacts using the steps outlined in the section above.</li><br>
+	
+		<li>Click on the <img src="<%= root_url %>images/About/Manage Contacts.jpg"> button in the “EMAIL SETTINGS” section in the lower right hand corner of the page.</li><br>
+	
+		<li>Check the boxes of the contacts you'd like to add to a group and then click the <img src="<%= root_url %>images/About/Add to Group.jpg"> button at the top of the list of contacts</li><br>
+	
+		<li>Click the radio button next to "New Group" and then type the name of the group in the box to the right and click the "Add Contacts" button.</li><br>
+	</ol>
+	
+	<strong><li>Removing a Contact From a Group</li></strong>
+	<ol start="1" type="1">
+		<li>Once you've added an email group, it will show up in a menu to the left of your list of contacts.  To remove a contact from a group, click on the group you wish to remove that contact from.  The site will display a full list of contacts included in that group.</li><br>
+		<li>Click on the check box next to the contact you wish to remove from the group and then click the <img src="<%= root_url %>images/About/Remove From Group.jpg"> button.  This will remove the contact from the group but will not delete the contact from your Contacts list.</li><br>
+	</ol>
+	
+	<strong><li>Adding a New Contact</li></strong>
+	<ol start="1" type="1">
+		<li>Click on the <img src="<%= root_url %>images/About/New Contact.jpg"> button.</li><br>
+		<li>Enter the Contact's Name and Email into the pop up and click "Submit".</li><br>
+	</ol>
+	
+	<strong><li>Deleting a Contact</li></strong>
+	<ol start="1" type="1">
+		<li>Click on the check box next to the contact you wish to delete and then click the <img src="<%= root_url %>images/About/Delete Selected.jpg"> button.  This will permanently remove the contact  from your Contacts list.</li><br>
+		<li>If you want to add this contact back in the future, you can either add it through the "New Contact" or "Import Contacts" feature.</li><br>
+	</ol>
 
 </div>
 </div>
