--- a/app/views/posts/_small_preview.html.erb
+++ b/app/views/posts/_small_preview.html.erb
@@ -3,10 +3,10 @@
     <h3><%= link_to truncate(post.title, :length => 40), post %></h3>
     <div class="which-college">by: <%= link_to(post.user.try(:username), post.user, :class => :author) %></div>
     <div class="votes">
-      <%= image_tag('like.png') %>
-      <%= post.up_votes %>
-      <%= image_tag('dislike.png', :class => 'dislike') %>
-      <%= post.down_votes %>
+      <%= link_to(image_tag('like.png'), vote_up_post_path(post), :method => :post, :remote => true, :class => "vote-up") if can? :create, Vote %>
+      <b id="vote_count_up<%= post.id %>"><%= post.up_votes %></b>
+      <%= link_to(image_tag('dislike.png', :class => 'dislike'), vote_down_post_path(post), :method => :post, :remote => true, :class => "vote-down") if can? :create, Vote %>
+      <b id="vote_count_down<%= post.id %>"><%= post.down_votes %></b>
     </div>
   </div>
   <div class="preview">
