--- a/public/stylesheets/user.css
+++ b/public/stylesheets/user.css
@@ -163,7 +163,7 @@
 }
 
 /*.standard table .gender {width: 260px;}*/
-.standard table .affilation {
+.standard table .affiliation {
     width: 100px;
 }
 
