--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -15,15 +15,15 @@
 
 <p class="about"><strong>What is a Smack?</strong></p>
 
-<p>A Smack is a photo, video, or news article about a Campus that can be used as smack talk against that Campus.  For example, a photo of a Duke basketball player getting dunked on by a UNC player would be a photo Smack that a user could post onto the Duke landing page.  Once the Smack is posted, it can be viewed by other users and sent as Smack to their rivals.</p>
+<p>A Smack is a photo, video, or news article about a Campus that can be used as smack talk against that Campus.  For example, a photo of a Duke basketball player getting dunked on by a UNC player would be a photo Smack that a user could post onto the Duke landing page.  Once the Smack is posted, it can be viewed by other users and sent as Smack.</p>
 
 <p class="about"><strong>What does &quot;Send as Smack&quot; do?</strong></p>
 
-<p>Everything posted onto Campusmack can be sent as Smack Talk.  If you find a post on Campusmack that you’d like to rub in the face of the opposition, click the &quot;Send as Smack&quot; button associated with that post.  You’ll be brought to a landing page that allows you to import contacts from your preferred email provider (Gmail, Yahoo, AOL, etc.) and send an email to those you want to Smack.  You can type in a custom message and once you click “Send” and email will be sent from our servers to the people you selected to receive the Smack.  The content from the post you chose to share will show up in the recipients Inbox with a Subject line that reads &quot;You just got SMACKED by (your first name) (your last name)&quot;.</p>
+<p>Everything posted onto Campusmack can be sent as Smack Talk.  If you find a post on Campusmack that you’d like to rub in the face of the opposition, click the <img src="<%= root_url %>images/About/Send as Smack.jpg"> button associated with that post.  You’ll be brought to a landing page that allows you to import contacts from your preferred email provider (Gmail, Yahoo, AOL, etc.) and send an email to those you want to Smack.  You can type in a custom message and once you click “Send” and email will be sent from our servers to the people you selected to receive the Smack.  The content from the post you chose to share will show up in the recipients Inbox with a Subject line that reads &quot;You just got SMACKED by (your first name) (your last name)&quot;.</p>
 
 <p class="about"><strong>What is a Redemption?</strong></p>
 
-<p>A Redemption is a photo, video, or news article about a Campus that can be used as bragging rights.  For example, if a College is ranked by US News as having a top 10 MBA program, this would be a News Redemption a user could post onto that College’s landing page.  Redemptions can also be sent as Smack talk.</p>
+<p>A Redemption is a photo, video, or news article about a Campus that can be used as bragging rights.  For example, if a College is ranked by US News as having a top 10 MBA program, this would be a News Redemption a user could post onto that College’s landing page.  If one of your annoying friends sends you a Smack about a College you support, you can "Smack Back" by sending a Redemption from the College you support or a Smack from the College they support.</p>
 
 <p class="about"><strong>What are the Conference Statistics on the Home page?</strong></p>
 
@@ -80,7 +80,7 @@
 <strong><li class="about">Importing Contacts</li></strong>
 
 <ol start="A" type="A">
-	<strong><li>Importing Contacts Within “Edit Profile” Settings</li></strong>
+	<strong><li>Importing Contacts Within the “Edit Profile” Settings</li></strong>
 		<ol start="1" type="1">
 			<li>Once signed in to your account, click on the “Profile” link in the upper right hand corner of the website.</li><br>
 			
@@ -130,20 +130,27 @@
 	<strong><li>Removing a Contact From a Group</li></strong>
 	<ol start="1" type="1">
 		<li>Once you've added an email group, it will show up in a menu to the left of your list of contacts.  To remove a contact from a group, click on the group you wish to remove that contact from.  The site will display a full list of contacts included in that group.</li><br>
-		<li>Click on the check box next to the contact you wish to remove from the group and then click the <img src="<%= root_url %>images/About/Remove From Group.jpg"> button.  This will remove the contact from the group but will not delete the contact from your Contacts list.</li><br>
+		<li>Click on the check box next to the contact you wish to remove from the group and then click the <img src="<%= root_url %>images/About/Remove From Group.jpg"> button above the list of contacts.  This will remove the contact from the group but will not delete the contact from your Contacts list.</li><br>
 	</ol>
 	
 	<strong><li>Adding a New Contact</li></strong>
 	<ol start="1" type="1">
-		<li>Click on the <img src="<%= root_url %>images/About/New Contact.jpg"> button.</li><br>
+		<li>Click on the <img src="<%= root_url %>images/About/New Contact.jpg"> button in the top right hand side of the "Contacts" page.</li><br>
 		<li>Enter the Contact's Name and Email into the pop up and click "Submit".</li><br>
 	</ol>
 	
 	<strong><li>Deleting a Contact</li></strong>
 	<ol start="1" type="1">
-		<li>Click on the check box next to the contact you wish to delete and then click the <img src="<%= root_url %>images/About/Delete Selected.jpg"> button.  This will permanently remove the contact  from your Contacts list.</li><br>
+		<li>Click on the check box next to the contact you wish to delete (you can select multiple contacts to delete) and then click the <img src="<%= root_url %>images/About/Delete Selected.jpg"> button above the list of contacts.  This will permanently remove the contact(s) from your Contacts list.</li><br>
 		<li>If you want to add this contact back in the future, you can either add it through the "New Contact" or "Import Contacts" feature.</li><br>
 	</ol>
+	
+	<strong><li>Editing a Contact</li></strong>
+	<ol start="1" type="1">
+		<li>Click on the <img src="<%= root_url %>images/About/Edit.jpg"> button to the right of the contact that you want to change.  This will bring up a pop up box with that contact's name and email address.</li><br>
+		<li>Make your changes and then click the "Submit" button.</li>
+	</ol>
+	
 
 </div>
 </div>
