--- a/app/views/posts/send_as_smack.html.erb
+++ b/app/views/posts/send_as_smack.html.erb
@@ -122,7 +122,7 @@
           <table cellpadding="0" cellspacing="0">
             <tr>
               <td class="description va-top2"><%= f.label :to, 'To:' %></td>
-              <td class="entry" colspan="2"><%= link_to "ADD RECIPIENTS", 'javascript:void(0)', :class => "blue_button", :id => "show_address_book" %><%= f.text_field :to, :id => 'mail_recipients' %></td>
+              <td class="entry" colspan="2"><%= link_to "ADD RECIPIENTS", 'javascript:void(0)', :class => "blue_button", :id => "show_address_book" %><%= f.text_field :to, :id => 'mail_recipients' %><br /></td>
             </tr>
             <tr class="hidden" id="address_book">
               <td class="description"></td>
