--- a/public/stylesheets/utility_components.css
+++ b/public/stylesheets/utility_components.css
@@ -49,7 +49,7 @@
 
 .sign_up_now_button a {
     display: block;
-    padding-top: 4px;
+    line-height: 28px;
     color: #fff;
     font-family: "Conv_MyriadPro-BoldCond";
     font-size: 20px;
