--- a/app/views/pages/500.html.erb
+++ b/app/views/pages/500.html.erb
@@ -22,7 +22,7 @@
   <div class="dialog">
     <h1>We're sorry for the fail.</h1>
 
-    <p>We are ashamed of this failure and will look into it as soon as possible!  If it happens a lot, <%= link_to "Contact Us", contact-us_path %>, directly with the issue.</p><br>
+    <p>We are ashamed of this failure and will look into it as soon as possible!  If it happens a lot, <%= link_to "Contact Us", "#" %>, directly with the issue.</p><br>
 	<p>Thanks,</p>
 	<p>Campusmack Team</p>
   </div>
