--- a/app/views/pages/500.html.erb
+++ b/app/views/pages/500.html.erb
@@ -20,9 +20,9 @@
   </div>
 
   <div class="dialog">
-    <h1>We're sorry for the fail.</h1>
+    <h1>We're sorry we failed.</h1><br>
 
-    <p>We are ashamed of this failure and will look into it as soon as possible!  If it happens a lot, <%= link_to "Contact Us", "#" %>, directly with the issue.</p><br>
+    <p>We are ashamed of this failure and will look into it as soon as possible!  If it happens a lot <%= link_to "Contact Us", '/contact-us' %> directly with the issue.</p><br>
 	<p>Thanks,</p>
 	<p>Campusmack Team</p>
   </div>
