Finish error test

--- a/app/views/pages/500.html.erb
+++ b/app/views/pages/500.html.erb
@@ -1,28 +1,11 @@
-<style type="text/css">
-  div.dialog {
-    width: 25em;
-    padding: 0 4em;
-    margin: 2em auto 0 auto;
-    border: 1px solid #ccc;
-    border-right-color: #999;
-    border-bottom-color: #999;
-  }
-
-  h1 {
-    font-size: 100%;
-    color: #f00;
-    line-height: 1.5em;
-  }
-</style>
 <div class="content new_level">
   <div class="content_header">
     <div class="content_title">Campusmack FAIL....</div>
   </div>
 
   <div class="dialog">
-    <h1>We're sorry we failed.</h1><br>
 
-    <p>We are ashamed of this failure and will look into it as soon as possible!  If it happens a lot <%= link_to "Contact Us", '/contact-us' %> directly with the issue.</p><br>
+    <br><p>Something happened we didn't plan for or an alien attacked the site!  If it happens a lot <%= link_to "Contact Us", '/contact-us' %> directly with the issue so we can hunt down the aliens.</p><br>
 	<p>Thanks,</p>
 	<p>Campusmack Team</p>
   </div>
