--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -9,7 +9,7 @@
 
 <p class="about"><strong>What is Campusmack?</strong></p>
 
-<p>Campusmack is a website where College Students, Alumni, and Fans alike can post and share content about rival campuses or the campuses they love.  Have you ever been frustrated by a friend, coworker, or family member who constantly gets in your face about how the College you love sucks?  Campusmack is designed to help you find and post dirt on the Campus your antagonist supports so you can put them in their place!</p>
+<p>Campusmack is a website where College Students, Alumni, and Fans alike can post and share content about campuses they love or love to hate.  Have you ever been frustrated by a friend, coworker, or family member who constantly gets in your face about how the College you love sucks?  Campusmack is designed to help you find and post dirt on the Campus your antagonist supports so you can put them in their place!</p>
 
 <p>While it can be tough to hold back sometimes when talking smack, Campusmack wants to build an edgy yet clean environment for its users.  This means absolutely no bullying, nudity, or profanity.  Please Smack Responsibly!</p>
 
@@ -154,12 +154,43 @@
 		<li>Click on the <img src="<%= root_url %>images/About/Edit.jpg"> button to the right of the contact that you want to change.  This will bring up a pop up box with that contact's name and email address.</li><br>
 		<li>Make your changes and then click the "Submit" button.</li>
 	</ol>
+</ol>
 
 <strong><li class="about">Sharing Content</li></strong>
 
 <ol start="A" type="A">
 	<strong><li>Send as Smack</li></strong>
 	<ol start="1" type="1">
+		<li>Once you find a post you want to send as Smack talk, click the <img src="<%= root_url %>images/About/Send as Smack_big.jpg"> button.  You will be routed to a landing page to compose the Smack email.</li></br>
+		<li>  If you've imported your email contacts, click the "Add Recipients" button and you'll be able to select groups or individual contacts to send the Smack to.  Once you're done selecting contacts, click the "I'm Done" button next to the "To" box.  You can also manually enter email addresses separated by a comma.  Once you've finished manually entering email addresses, hit the "Tab" key.</li></br>
+		<li>You can edit the default subject line to whatever you want.</li><br>
+		<li>Type a message for the body of the email in the "Message" box.</li><br>
+		<li>Click "Send" to send the message.</li><br>
+		<li>Sit back and smile because you just SMACKED someone...not physically, but through the computer.</li>
+	</ol>
+
+	<strong><li>Email Share</li></strong>
+	<ol start="1" type="1">
+		<li>Once you find a post you want to share with your friends through email, click the <img src="<%= root_url %>images/About/Email Share.jpg"> icon.  You will be routed to a landing page to compose the email.</li></br>
+		<li>  If you've imported your email contacts, click the "Add Recipients" button and you'll be able to select groups or individual contacts to share the post with.  Once you're done selecting contacts, click the "I'm Done" button next to the "To" box.  You can also manually enter email addresses separated by a comma.  Once you've finished manually entering email addresses, hit the "Tab" key.</li></br>
+		<li>You can edit the default subject line to whatever you want.</li><br>
+		<li>Type a message for the body of the email in the "Message" box.</li><br>
+		<li>Click "Send" to send the message.</li><br>
+	</ol>
+	
+	<strong><li>Facebook Share</li></strong>
+	<ol start="1" type="1">
+		<li>If you find a post you want to share with your friends through Facebook, click the <img src="<%= root_url %>images/About/Facebook Share.jpg"> icon.</li></br>
+		<li>Write a message in the box of the Facebook pop up and click the "Share Link" button.  This will share the information about the Campusmack post to your Facebook wall.</li></br>
+	</ol>
+	
+	<strong><li>Twitter Share</li></strong>
+	<ol start="1" type="1">
+		<li>If you find a post you want to share with your friends through Twitter, click the <img src="<%= root_url %>images/About/Twitter Share.jpg"> icon.</li></br>
+		<li>You'll be routed to a Twitter page with a field for entering your Twitter status.  The field will have an auto generated message from Campusmack with a link back to the post you want to share.  Click "Tweet" once you're satisfied with the message.</li></br>
+	</ol>
+
+</ol>
 	
 
 </div>
