Send in email/Send as smack fix, avatar fix

--- a/app/views/posts/send_as_smack.html.erb
+++ b/app/views/posts/send_as_smack.html.erb
@@ -117,7 +117,7 @@
   </div>
   <div class="form_container post_form share_post">
     <div class="form_wrapper">
-      <%= form_for :share, :url => send_as_smack_post_path(@post) do |f| %>
+      <%= form_for :share, :url => @url do |f| %>
         <div class="table_padding">
           <table cellpadding="0" cellspacing="0">
             <tr>
