--- a/app/views/user_mailer/share_post.html.erb
+++ b/app/views/user_mailer/share_post.html.erb
@@ -65,18 +65,20 @@
                   </td>
                 </tr>
               </table>
-               <img width="10" height="20" src="<%= root_url %>images/email/spacer.gif">
-		       <img width="525" height="21" src="<%= root_url %>images/email/divider.gif">
-              <table width="525" cellspacing="0" cellpadding="0" border="0">
-                <tr>
-                  <td>
-                    <p style="font-family: Arial, sans-serif; font-size: 12px; line-height: 18px; margin: 0 0 20px">Are
-                      you going to take that?</p>
+              <img width="10" height="20" src="<%= root_url %>images/email/spacer.gif">
+              <% if @send_as_smack %>
+                <img width="525" height="21" src="<%= root_url %>images/email/divider.gif">
+                <table width="525" cellspacing="0" cellpadding="0" border="0">
+                  <tr>
+                    <td>
+                      <p style="font-family: Arial, sans-serif; font-size: 12px; line-height: 18px; margin: 0 0 20px">Are
+                        you going to take that?</p>
 
-                    <p><%= link_to "Smack " + @smacker.first_name + " Back!", college_smacks_url(@smacker.college) %></a></p>
-                  </td>
-                </tr>
-              </table>
+                      <p><%= link_to "Smack " + @smacker.first_name + " Back!", college_smacks_url(@smacker.college) %></a></p>
+                    </td>
+                  </tr>
+                </table>
+              <% end %>
               <img width="10" height="20" src="<%= root_url %>images/email/spacer.gif">
 
             </td>
@@ -86,7 +88,7 @@
         <table cellspacing="0" cellpadding="0" border="0" width="525" align="center">
           <tr>
             <td align="right" style="vertical-align: middle;">
-              <p style="font-family: Arial, sans-serif; color: #878787; font-size: 9px; margin: 0;">Copyright &#169; <%= @time.year %>
+              <p style="font-family: Arial, sans-serif; color: #878787; font-size: 9px; margin: 0;">&copy; <%= Date.today.year %>
                 Campusmack</p></td>
           </tr>
         </table>
